data/derived/fa15/progs/unify/prog1392.ml.out
Characters 463-481:
  | Golden e'              -> cos(eval (e',x,y) *. x * y)
                                  ^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
